objects/Contract_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Line Items</relationshipLabel>
        <relationshipName>Contract_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_id__c</fullName>
        <description>This field is used to store External Id.</description>
        <label>External id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_End_Date__c</fullName>
        <description>End Date..</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LCRM_Is_Bridge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Bridge..?</description>
        <label>Is Bridge?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LCRM_Multi_Year_Indicator__c</fullName>
        <label>Multi Year Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Source_System_Product_Id__c</fullName>
        <label>Source System Product Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Start_Date__c</fullName>
        <description>Start Date...</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LCRM_Units_Detail__c</fullName>
        <label>Units Detail</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Contract Line Items</relationshipLabel>
        <relationshipName>Contract_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Usage_Link__c</fullName>
        <label>Usage Link</label>
        <type>Url</type>
    </fields>
    <label>Contract Line Item</label>
    <nameField>
        <displayFormat>CLI-{0000}</displayFormat>
        <label>Contract Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>